--- a/ProyectoAzureAMH/Views/_ViewImports.cshtml
+++ b/ProyectoAzureAMH/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using ProyectoAzureAMH
+﻿@using NugetUtopia;
+@using ProyectoAzureAMH
 @using ProyectoAzureAMH.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
