--- a/ProyectoAzureAMH/Views/_ViewImports.cshtml
+++ b/ProyectoAzureAMH/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿@using NugetUtopia;
+﻿@using ProyectoAzureAMH.Extensions
+@using Microsoft.AspNetCore.Http
+@using NugetUtopia;
 @using ProyectoAzureAMH
 @using ProyectoAzureAMH.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
