--- a/ProyectoAzureAMH/Views/Home/Index.cshtml
+++ b/ProyectoAzureAMH/Views/Home/Index.cshtml
@@ -204,6 +204,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
 
                                                 </div>
@@ -287,6 +288,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
@@ -369,6 +371,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
