--- a/ProyectoAzureAMH/Views/Juegos/Index.cshtml
+++ b/ProyectoAzureAMH/Views/Juegos/Index.cshtml
@@ -138,6 +138,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
@@ -221,6 +222,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
@@ -304,6 +306,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
@@ -390,6 +393,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
@@ -473,6 +477,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
@@ -556,6 +561,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
@@ -641,6 +647,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
@@ -724,6 +731,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
@@ -807,6 +815,7 @@
                             </g>
                           </svg>
                                                         </a>
+                                                        <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="SeleccionarFavorito" asp-route-idjuego="@juego.IdJuego">❤</a>
                                                     }
                                                 </div>
                                             </div>
