--- a/ProyectoAzureAMH/Views/Shared/_Layout.cshtml
+++ b/ProyectoAzureAMH/Views/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
                 </ul>
 
                 <div class="user_option">
+                    <a style="text-decoration:none;color:white" asp-controller="Juegos" asp-action="Favoritos">❤</a>
                     <a class="cart_link" asp-action="Carrito" asp-controller="Carrito">
                         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
